# Flask-CleanArchitecture

./: .env  .env.example  DEPLOYMENT_GUIDE.md  README.md  README1.md  UTH_ConfMS_ERD.drawio  frontend.text  main.py  pyproject.toml  requirements.txt  structure.md  test_cfp_module.py  uth_confms.db
app/: __init__.py
app/api/: auth.py  conferences.py  deps.py  papers.py  pc_members.py  reviews.py
app/core/: config.py  database.py  security.py
app/models/: audit_log.py  bid.py  camera_ready.py  coi.py  conference.py  decision.py  email_template.py  paper.py  paper_assignment.py  paper_author.py  pc_member.py  review.py  review_discussion.py  tenant.py  track.py  user.py
app/schemas/: __init__.py  conference.py  paper.py  review.py  user.py
docs/: CFP_API_GUIDE.md  PAPER_SUBMISSION_API.md
frontend/: index.html
frontend/components/: sidebar.html
interfaces/: auth.css  auth.html
src/: .env.example  alembic.ini  app.py  app_logging.py  cfp_ui.py  conference_ui.py  config.py  create_app.py  error_handler.py  requirements.txt  submissions_ui.py
src/api/: middleware.py  routes.py  swagger.py
src/api/controllers/: auth_controller.py  conference_controller.py  decision_controller.py  email_template_controller.py  paper_controller.py  pc_member_controller.py  (+2 more)
src/domain/: exceptions.py
src/migrations/: env.py
src/services/: auth_service.py  bidding_assignment_service.py  conference_service.py  decision_service.py  email_template_service.py  paper_service.py  pc_member_service.py  tenant_service.py  track_service.py
templates/: login.html  register.html
(+37 files in other folders)
