[project]
name = "uth-confms"
version = "1.0.0"
description = "UTH Scientific Conference Paper Management System"
readme = "README1.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.12",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0",
    "pymysql>=1.1.2",
    "cryptography>=46.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "black>=23.0",
    "ruff>=0.1",
]
ai = [
    "openai>=1.0",
    "tiktoken>=0.5",
]

